Fix for issue #292: need error recovery for unclosed method call